Added fast phi matrix C++ function. Added contributors.

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -4,6 +4,7 @@ export(predict_motr_bart)
 export(predict_motr_bart_class)
 export(smotr_bart)
 export(test_function)
+import(Rcpp)
 importFrom(MCMCpack,'rdirichlet')
 importFrom(mvtnorm,'rmvnorm')
 importFrom(stats,'dnorm')
@@ -13,3 +14,4 @@ importFrom(stats,'rnorm')
 importFrom(stats,'runif')
 importFrom(stats,'sd')
 importFrom(truncnorm,'rtruncnorm')
+useDynLib(SMOTRbart, .registration = TRUE)
